--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <a-asset-item id="building8" src="./models/City/Large Building-3IhrYZp6tP.glb"></a-asset-item> <!-- green building 4*3 -->
         <a-asset-item id="building9" src="./models/City/Low Building-dYEbYdPfJr.glb"></a-asset-item> <!-- gray and black building -->
         <a-asset-item id="building10" src="./models/City/Large Building-ppwtREejXg.glb"></a-asset-item> <!-- green building 4*5 -->
-        <a-asset-item id="building11" src="./models/City/Town House.glb"></a-asset-item> <!-- Town Hall -->
-        <a-asset-item id="building12" src=""></a-asset-item> 
+        <a-asset-item id="building11" src="./models/Lady Liberty.glb"></a-asset-item> <!-- statue de la liberté -->
+        <a-asset-item id="building12" src="./models/island.glb"></a-asset-item> 
         <a-asset-item id="building13" src="./models/sport/Ping Pong table.glb"></a-asset-item> <!-- Ping Pong table -->
         <a-asset-item id="building14" src="./models/sport/Basketball court.glb"></a-asset-item> <!-- Basketball court -->
         <a-asset-item id="building15" src="./models/sport/Tennis court.glb"></a-asset-item> <!-- Tennis court -->
         <a-asset-item id="building16" src="./models/sport/Soccer Field.glb"></a-asset-item> <!-- Soccer field -->
-        <a-asset-item id="building17" src="./models/City/Low Building-zfjlejAxB7.glb"></a-asset-item> <!-- Dubai tower -->
+        <a-asset-item id="building17" src="./models/City/Skyscraper.glb"></a-asset-item> <!-- Dubai tower -->
         <a-asset-item id="building18" src="./models/City/Skyscraper2.glb"></a-asset-item> <!-- skyscraper 1 -->
         <a-asset-item id="building19" src="./models/City/Skyscraper1.glb"></a-asset-item> <!-- skyscraper 2 -->
         <a-asset-item id="building20" src="./models/City/Parking Lot.glb"></a-asset-item> <!-- parking lot -->
@@ -48,7 +48,7 @@
         <a-asset-item id="building36" src="./models/Tree1.glb"></a-asset-item>
       </a-assets>
 
-      <a-plane position="0 0 0" rotation="-90 0 0" width="300" height="300" color="#777"></a-plane>
+      <a-plane position="-60 0 0" rotation="-90 0 0" width="185" height="300" color="#777"></a-plane>
 
 
 
@@ -95,8 +95,9 @@
     <a-entity gltf-model="#building7" position="-80 -0.8 13" scale="8 8 8" rotation="0 0 0"></a-entity>
     <a-entity gltf-model="#building7" position="-65 -0.8 13" scale="8 8 8" rotation="0 0 0"></a-entity>
 <!-- Town Hall area -->
-    <a-entity gltf-model="#building11" position="-50 -0.8 -120" scale="8 8 8" rotation="0 0 0"></a-entity>
-    <a-entity gltf-model="#building12" position="-50 -0.8 -40" scale="8 8 8" rotation="0 0 0"></a-entity>
+    <a-plane position="-60 0.1 -90" rotation="-90 0 0" width="185" height="120" color="#0000FF"></a-plane>
+    <a-entity gltf-model="#building11" position="-50 36 -120" scale="16 16 16" rotation="0 0 0"></a-entity>
+    <a-entity gltf-model="#building12" position="-50 4 -120" scale="1.2 1.2 1.2 " rotation="0 230 0"></a-entity>
 <!-- Sports area -->
 <a-plane position="-5 0.2 85" rotation="-90 0 0" width="70" height="100" color="green"></a-plane>
 <a-entity gltf-model="#building29" position="-35 0 40" scale="1 1 1" rotation="0 90 0"></a-entity>
@@ -129,6 +130,11 @@
 <a-entity gltf-model="#building30" position="-39 1.7 80" scale="5 5 5" rotation="0 180 0"></a-entity>
 
 <!-- Business area -->
+<a-entity gltf-model="#building5" position=" -93.6 0.1 105.9" scale="5 1 5" rotation="0 0 0"></a-entity>
+<a-entity gltf-model="#building5" position="-102.9 0.1 105.9" scale="5 1 5" rotation="0 0 0"></a-entity>
+<a-entity gltf-model="#building5" position=" -93.6 0.1 96.6" scale="5 1 5" rotation="0 0 0"></a-entity>
+<a-entity gltf-model="#building5" position="-102.9 0.1  96.6" scale="5 1 5" rotation="0 0 0"></a-entity>
+<a-entity gltf-model="#building5" position="-93.6 0.1 40.8" scale="5 1 5" rotation="0 0 0"></a-entity>
 <a-entity gltf-model="#building5" position="-102.9 0.1 40.8" scale="5 1 5" rotation="0 0 0"></a-entity>
 <a-entity gltf-model="#building5" position="-93.6 0.1 40.8" scale="5 1 5" rotation="0 0 0"></a-entity>
 <a-entity gltf-model="#building5" position="-102.9 0.1 50.1" scale="5 1 5" rotation="0 0 0"></a-entity>
@@ -178,7 +184,7 @@
 <a-entity gltf-model="#building36" position="-130 4 50" scale="10 10 10" rotation="0 0 0"></a-entity>
 <a-entity gltf-model="#building36" position="-110 4 50" scale="10 10 10" rotation="0 0 0"></a-entity>
 <a-entity gltf-model="#building36" position="-70 4 50" scale="10 10 10" rotation="0 0 0"></a-entity>
-<a-entity gltf-model="#building17" position="-100 0 100" scale="30 30 30" rotation="0 180 0"></a-entity>
+<a-entity gltf-model="#building17" position="-98 0 103" scale="2.5 2.5 2.5" rotation="0 90 0"></a-entity>
 <a-entity gltf-model="#building18" position="-140 0 40" scale="7 7 7" rotation="0 270 0"></a-entity>
 <a-entity gltf-model="#building19" position="-140 0 60" scale="7 7 7" rotation="0 270 0"></a-entity>
 <a-entity gltf-model="#building18" position="-140 0 80" scale="7 7 7" rotation="0 270 0"></a-entity>
@@ -366,7 +372,7 @@
 <a-entity gltf-model="#building21" position="-94.5 0 30" scale="8 8 8" rotation="0 180 0"></a-entity>
 <!-- Tree -->
 
-      <a-entity id="cameraRig" position="5 4 33" custom-controls>
+      <a-entity id="cameraRig" position="-50 100 -120" custom-controls>
         <a-entity camera look-controls wasd-controls="enabled: false"></a-entity>
       </a-entity>
 
@@ -498,6 +504,8 @@
  
 
   <a-entity fence="length: 50; width: 10; color: #131e27; dashed: true" position="-40 0 85" rotation="0 90 0"></a-entity>
+
+  <a-entity fence="length: 185; width: 7; color: #131e27; dashed: true" position="-60 0 -30" rotation="0 0 0"></a-entity>
 </a-scene>
   </body>
 </html>
