--- a/examples/castle/index.html
+++ b/examples/castle/index.html
@@ -61,12 +61,17 @@
             <a-text id="score" value="Score: 0" position="0 0.02 0" align="center" color="black" width="1" font="mozillavr">
             </a-text>
           </a-plane>
-        </a-entity>
-      </a-entity>
-      <a-entity id="leftController" oculus-touch-controls="hand: left" thumbstick-move></a-entity>
+          <a-plane id="time-panel"  position="-0.2 0.2 -1" width="0.4" height="0.1" color="#FFD700" material="shader: flat">
+            <a-text id="time" value="time left: 0" position="0 0.02 0" align="center" color="black" width="1" font="mozillavr">
+            </a-text>
+          </a-plane>
+          <a-entity id="leftController" oculus-touch-controls="hand: left" thumbstick-move></a-entity>
       <a-entity id="rightController" oculus-touch-controls="hand: right">
         <a-entity raycaster="objects: .collidable" cursor></a-entity>
       </a-entity>
+        </a-entity>
+      </a-entity>
+      
       <a-plane id="overlay" position="0 3 -2" visible="false"></a-plane>
       <a-plane id="dialogue-box" position="0 2 -2" width="4" height="0.5" visible="false"material="color: black; opacity: 0.8; shader: flat"geometry="primitive: plane; width:5; height: 1.4">
         <a-text id="dialogue-text" value="Hi! How can I help you?" position="0 0.2 0.01" width="2" align="center"text="color: white; wrapCount: 30; font: mozillavr"></a-text>
