adding updated mesh

--- a/examples/castle/index.html
+++ b/examples/castle/index.html
@@ -18,6 +18,7 @@
       <a-asset-item id="npc1" src="../assets/pnj/Man.glb"></a-asset-item>
       <a-asset-item id="npc2" src="../assets/pnj/Business%20Man.glb"></a-asset-item>
       <a-asset-item id="npc3" src="../assets/pnj/Hoodie%20Character.glb"></a-asset-item>
+      <a-asset-item id="navmesh" src="../assets/navmesh.gltf"></a-asset-item>
       <a-asset-item id="building1" src="../assets/Medium_wealth_area/Large Building-JgGLJH2iXj.glb"></a-asset-item> <!-- green building 2*3 -->
         <a-asset-item id="building2" src="../assets/Lady_Liberty_area/Dock Wide.glb"></a-asset-item> <!-- dock wide -->
         <a-asset-item id="building3" src="../assets/Medium_wealth_area/Large Building-h7Jaq7bqMq.glb"></a-asset-item> <!-- building with black top floor -->
