--- a/examples/castle/index.html
+++ b/examples/castle/index.html
@@ -55,7 +55,7 @@
     <a-plane position="0 0 0" rotation="-90 0 0" width="300" height="300" color="#777"></a-plane>
     <!-- Player. -->
     <a-entity scale="" id="rig" movement-controls="constrainToNavMesh: true;
-                                   controls: checkpoint, gamepad, trackpad, keyboard, nipple;" position="10 0 0">
+                                   controls: checkpoint, gamepad, trackpad, keyboard;" position="10 0 0">
             <a-entity camera position="0 1.5 0" look-controls="pointerLockEnabled: true">
                 <a-entity cursor position="0 0 -0.01" geometry="primitive: sphere; radius: 0.00005"
                     material="color: #fff; shader: flat">
@@ -69,19 +69,21 @@
                                       font="mozillavr">
                       </a-text>
                   </a-plane>
+                  <a-plane id="feedback-message" 
+                  align="center"
+                  width="4" 
+                  height="0.5" 
+                  visible="false"
+                  position="0 2 0"
+                  material="color: #333; opacity: 1; shader: flat; side: double"
+
+                  >
+                  <a-text id="feedback-text"
+                  position="-0.7 0.1 0.01">
+
+                  </a-text>
+                  </a-plane>
                 </a-entity>
-                <a-plane id="feedback-message" 
-                width="4" 
-                height="0.5" 
-                visible="false"
-                position="0 2 -2"
-                material="color: #333; opacity: 0; shader: flat; side: double"
-                text="value: ; align: center; color: white; font: mozillavr; wrapCount: 25"
-                animation__fadein="property: material.opacity; from: 0; to: 1; dur: 300; startEvents: showFeedback"
-                animation__fadeout="property: material.opacity; from: 1; to: 0; dur: 300; startEvents: hideFeedback"
-                animation__glow="property: components.material.material.emissiveIntensity; from: 0; to: 1; dur: 500; startEvents: showFeedback"
-                animation__glowout="property: components.material.material.emissiveIntensity; from: 1; to: 0; dur: 500; startEvents: hideFeedback">
-                </a-plane>
             </a-entity>
             <a-entity id="leftController" oculus-touch-controls="hand: left" thumbstick-move></a-entity>
             <a-entity id="rightController" oculus-touch-controls="hand: right">
@@ -122,8 +124,8 @@
 
 <!-- Boutons de choix interactifs -->
 <a-plane id="choice1" 
-
-  position="-1.3 -0.2 0.01" 
+  align="center"
+  position="-1.1 -0.2 0.01" 
   width="1"
   height="0.5"
   class="clickableChoice"
@@ -148,13 +150,23 @@
 
 <!-- Bouton de fermeture -->
 <a-plane id="close" 
-class="close"
-position="0 -0.4 0.01" 
-width="0.6" 
-height="0.2" 
-color="red"
-text="value: Close; align: center; color: white; font: mozillavr; width: 2">
+  class="close"
+  position="0 -0.4 0.01" 
+  width="0.6" 
+  height="0.2" 
+  color="red">
+  
+  <a-text value="Close"
+          align="center"
+          baseline="center"
+          color="white"
+          font="mozillavr"
+          width="2"
+          position="0 0.05 0.01">
+  </a-text>
+
 </a-plane>
+
         </a-plane>
         </a-entity>
 
