--- a/examples/city/index.html
+++ b/examples/city/index.html
@@ -156,6 +156,13 @@
         transparent="true"></a-box>
     </a-entity>
 
+    <a-entity id="npc4-container" position="-48 1.4 -100" rotation="0 -90 0">
+      <a-text id="name" value="Jack " position="0 2 0" align="center" color="black"></a-text>
+      <a-entity id="npc4-entity" gltf-model="#npc3" scale="1 1 1"></a-entity>
+      <a-box id="npc4-hitbox" class="clickable" position="0 1 0" width="1" height="2" depth="1" opacity="0"
+        transparent="true"></a-box>
+    </a-entity>
+
     <a-entity nav-mesh normal-material visible="false" position="0 0 0" gltf-model="#navmesh"></a-entity>
 
 
