--- a/examples/city/index.html
+++ b/examples/city/index.html
@@ -153,7 +153,7 @@
     </a-entity>
 
 
-    <a-entity id="npc1-container" position="-50 0.2 70" rotation="0 180 0">
+    <a-entity id="npc1-container" position="-95 0.2 90" rotation="0 180 0">
       <a-text id="name" value="Greg" position="0 2 0" align="center"></a-text>
       <a-entity id="npc1-entity" gltf-model="#npc1" scale="0.35 0.35 0.35"></a-entity>
       <a-box id="npc1-hitbox" class="clickable" position="0 1 0" width="1" height="2" depth="1" opacity="0"
@@ -168,7 +168,7 @@
     </a-entity>
 
     <a-entity id="npc3-container" position="5 0.2 55" rotation="0 -90 0">
-      <a-text id="name" value="Luke" position="0 2 0" align="center"></a-text>
+      <a-text id="name" value="Luke " position="0 2 0" align="center" color="black"></a-text>
       <a-entity id="npc3-entity" gltf-model="#npc3" scale="1 1 1"></a-entity>
       <a-box id="npc3-hitbox" class="clickable" position="0 1 0" width="1" height="2" depth="1" opacity="0"
         transparent="true"></a-box>
