--- a/examples/city/index.html
+++ b/examples/city/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no,user-scalable=no,maximum-scale=1">
-  <title>Examples • Castle</title>
+  <title>Welcome to New York</title>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://cdn.aframe.io/releases/1.2.0/aframe-extras.min.js"></script>
   <script src="../../dist/aframe-extras.js?V=1"></script>
