removing zoom & changing "Fermer" to "Close"

--- a/examples/city/index.html
+++ b/examples/city/index.html
@@ -68,10 +68,9 @@
 
     <a-entity id="rig"
       movement-controls="constrainToNavMesh: true; controls: checkpoint, gamepad, trackpad, keyboard, nipple;"
-      position="10 0 0"
-      event-set__entervr="_event: entered-vr; _target: #camera; camera.zoom: 0.5"
-      event-set__exitvr="_event: exit-vr; _target: #camera; camera.zoom: 1">
-      <a-entity id="camera" camera position="0 1.5 0" look-controls="pointerLockEnabled: true">
+      position="10 0 0">
+
+      <a-entity camera position="0 1.5 0" look-controls="pointerLockEnabled: true">
   <a-entity cursor position="0 0 -0.01" geometry="primitive: sphere; radius: 0.00005"
     material="color: #202020; shader: flat">
     <a-entity id="leftController" oculus-touch-controls="hand: left; model: true" thumbstick-move>
@@ -110,7 +109,7 @@
           <a-text id="remaining-text" value="Remaining:" position="0.6 0.5 0.01" width="1.5"
           text="color: cyan; wrapCount: 20; font: mozillavr"></a-text>
           <a-plane id="close" class="close" position="-0.5 -0.5 0.1" width="0.6" height="0.2" color="red"
-            text="value: Fermer; align: center; color: white; font: mozillavr; width: 2">
+            text="value: Close; align: center; color: white; font: mozillavr; width: 2">
           </a-plane>
           <a-plane id="choice1" 
           align="center"
