--- a/examples/city/index.html
+++ b/examples/city/index.html
@@ -741,9 +741,7 @@
       rotation="0 0 0"></a-entity>
   </a-scene>
 
-  <script type="module" src="clickable.js"></script>
-
-  <script src="components.js"></script>
+  <script type="module" src="interaction.js"></script>
 </body>
 
 </html>
