--- a/examples/city/index.html
+++ b/examples/city/index.html
@@ -184,7 +184,7 @@
     <a-entity nav-mesh normal-material visible="false" position="0 0 0" gltf-model="#navmesh"></a-entity>
 
 
-    <a-plane id="ground" position="-60 -0.1 60" rotation="-90 0 0" width="185" height="180"></a-plane>
+    <a-plane id="ground" position="-60 -0.1 60" rotation="-90 0 0" width="185" height="180" color="#6B6653"></a-plane>
 
 
 
@@ -524,8 +524,8 @@
     <a-entity gltf-model="#skyscraper_2" position="-60 0 100" scale="7 7 7" rotation="0 90 0"></a-entity>
     <a-entity gltf-model="#skyscraper_1" position="-60 0 120" scale="7 7 7" rotation="0 90 0"></a-entity>
     <a-entity gltf-model="#skyscraper_2" position="-60 0 140" scale="7 7 7" rotation="0 90 0"></a-entity>
-    <a-entity gltf-model="#parking_lot" position="-85 0 125.5" scale="7 7 7" rotation="0 90 0"></a-entity>
-    <a-entity gltf-model="#parking_lot" position="-110 0 125.5" scale="7 7 7" rotation="0 90 0"></a-entity>
+    <a-entity gltf-model="#parking_lot" position="-85.000 0 127.261" scale="5.500 7 7" rotation="0 90 0"></a-entity>
+    <a-entity gltf-model="#parking_lot" position="-112.147 0 127.261" scale="5.500 7 7" rotation="0 90 0"></a-entity>
     <a-entity gltf-model="#tree_1" position="-120 4 145" scale="10 10 10" rotation="0 0 0"></a-entity>
     <a-entity gltf-model="#tree_1" position="-110 4 145" scale="10 10 10" rotation="0 0 0"></a-entity>
     <a-entity gltf-model="#tree_1" position="-100 4 145" scale="10 10 10" rotation="0 0 0"></a-entity>
@@ -615,55 +615,55 @@
 
     <!-- Road  -->
     <a-entity gltf-model="#road_block" position="8 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="3 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-2 0 -0.5" scale="8 8 8" rotation="0 181 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-7 0 -0.5" scale="8 8 8" rotation="0 181.5 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-12 0 -0.5" scale="8 8 8" rotation="0 182 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-17 0 -0.5" scale="8 8 8" rotation="0 182.5 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-22 0 -0.5" scale="8 8 8" rotation="0 183 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-27 0 -0.5" scale="8 8 8" rotation="0 183.5 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-32 0 -0.5" scale="8 8 8" rotation="0 184 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-37 0 -0.5" scale="8 8 8" rotation="0 184.5 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-42 0 -0.5" scale="8 8 8" rotation="0 185 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-52 0 0.5" scale="8 8 8" rotation="0 185 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-57 0 0.6" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-62 0 0.7" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-67 0 0.8" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="2.800 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-2.474 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-7.721 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-12.961 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-18.193 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-23.357 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-28.548 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-33.739 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-38.929 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+
+    <a-entity gltf-model="#road_block" position="-52 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-57 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-62 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-67 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-64.5 0.05 130" scale="8 8 8" rotation="0 180 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-59.5 0.05 130" scale="8 8 8" rotation="0 180 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-54.5 0.05 130" scale="8 8 8" rotation="0 180 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-49.5 0.05 130" scale="8 8 8" rotation="0 180 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-69.5 0.05 130" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-72 0 0.9" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-77 0 1" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-82 0 1.1" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-87 0 1.2" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-92 0 1.3" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-102 0 1.4" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-107 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-112 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-117 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-122 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-127 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-132 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#curved_road" position="-97 0 30" scale="0.5 0.5 0.5" rotation="0 180 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-97 0 26" scale="8 8 8" rotation="0 90 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-72 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-77 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-82 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-87 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-92 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-102 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-107 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-112 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-117 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-122 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-127 0 -0.5" scale="8 8 8" rotation="0 180 0"></a-entity>
+    <!-- <a-entity gltf-model="#road_block" position="-128 0 1.5" scale="8 8 8" rotation="0 180 0"></a-entity> -->
+
+    <a-entity gltf-model="#road_block" position="-97 0 25" scale="8 8 8" rotation="0 90 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-97 0 21" scale="8 8 8" rotation="0 90 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-97 0 16" scale="8 8 8" rotation="0 90 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-97 0 11" scale="8 8 8" rotation="0 90 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-97 0 6" scale="8 8 8" rotation="0 90 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-45 0 20" scale="8 8 8" rotation="0 90 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-45 0 25" scale="8 8 8" rotation="0 90 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-46.5 0 4.5" scale="8 8 8" rotation="0 95 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-46 0 9.5" scale="8 8 8" rotation="0 94.5 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-45.5 0 14.5" scale="8 8 8" rotation="0 94 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-45 0 19.5" scale="8 8 8" rotation="0 93.5 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-45 0 4.5" scale="8 8 8" rotation="0 90 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-45 0 9.5" scale="8 8 8" rotation="0 90 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-45 0 14.5" scale="8 8 8" rotation="0 90 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-45 0 19.5" scale="8 8 8" rotation="0 90 0"></a-entity>
+    <a-entity gltf-model="#curved_road" position="-97 0 30" scale="0.25 0.25 0.25" rotation="0 180 0"></a-entity>
 
-
-    <a-entity gltf-model="#road_block" position="-45 0 35" scale="8 8 8" rotation="0 92 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-45 0 40" scale="8 8 8" rotation="0 91.5 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-45 0 45" scale="8 8 8" rotation="0 91 0"></a-entity>
-    <a-entity gltf-model="#road_block" position="-45 0 50" scale="8 8 8" rotation="0 90.5 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-45 0 35" scale="8 8 8" rotation="0 90 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-45 0 40" scale="8 8 8" rotation="0 90 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-45 0 45" scale="8 8 8" rotation="0 90 0"></a-entity>
+    <a-entity gltf-model="#road_block" position="-45 0 50" scale="8 8 8" rotation="0 90 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-45 0 55" scale="8 8 8" rotation="0 90 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-45 0 60" scale="8 8 8" rotation="0 90 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-45 0 65" scale="8 8 8" rotation="0 90 0"></a-entity>
@@ -703,6 +703,44 @@
     <a-entity gltf-model="#road_block" position="-84.5 0 30" scale="8 8 8" rotation="0 180 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-89.5 0 30" scale="8 8 8" rotation="0 180 0"></a-entity>
     <a-entity gltf-model="#road_block" position="-94.5 0 30" scale="8 8 8" rotation="0 180 0"></a-entity>
+ <!-- Fences -->
+ <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" position="-45 0.1 30"></a-entity>
+  <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" position="-97 0.1 1.5"
+    rotation="0 90 0"></a-entity>
+  <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" position="-45 0.1 130"
+    rotation="0 0 0"></a-entity>
+  <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" position="-47 0.1 -0"
+    rotation="0 95 0"></a-entity>
+  <a-entity fence="length: 32; width: 10; color: #131e27; dashed: true" position="20 0.5 60"
+    rotation="0 90 0"></a-entity>
+  <a-entity fence="length: 32; width: 10; color: #131e27; dashed: true" position="-5 0.5 60"
+    rotation="0 90 0"></a-entity>
+  <a-entity fence="length: 10; width: 10; color: #131e27; dashed: true" position="0 0.5 44"
+    rotation="0 0 0"></a-entity>
+  <a-entity fence="length: 10; width: 10; color: #131e27; dashed: true" position="15 0.5 44"
+    rotation="0 0 0"></a-entity>
+  <a-entity fence="length: 10; width: 10; color: #131e27; dashed: true" position="0 0.5 76"
+    rotation="0 0 0"></a-entity>
+  <a-entity fence="length: 10; width: 10; color: #131e27; dashed: true" position="15 0.5 76"
+    rotation="0 0 0"></a-entity>
+  <a-entity fence="length: 100; width: 10; color: #131e27; dashed: true" position="30 0.5 85"
+    rotation="0 90 0"></a-entity>
+  <a-entity fence="length: 70; width: 10; color: #131e27; dashed: true" position="-5 0.5 135"
+    rotation="0 0 0"></a-entity>
+  <a-entity fence="length: 25; width: 10; color: #131e27; dashed: true" position="17.5 0.5 35"
+    rotation="0 0 0"></a-entity>
+  <a-entity fence="length: 25; width: 10; color: #131e27; dashed: true" position="-27.5 0.5 35"
+    rotation="0 0 0"></a-entity>
+  <a-entity fence="length: 50; width: 10; color: #131e27; dashed: true" position="-41 0.5 85"
+    rotation="0 90 0"></a-entity>
+  <a-entity fence="length: 100.5; width: 4; color: #131e27; dashed: true" position="-102.3 0.4 -30"
+    rotation="0 0 0"></a-entity>
+  <a-entity fence="length: 80.5; width: 4; color: #131e27; dashed: true" position="-7.8 0.4 -30"
+    rotation="0 0 0"></a-entity>
+  <a-entity fence="length: 185; width: 4; height:5; color: #131e27; dashed: true" position="-60 -2.5 -30"
+    rotation="0 0 0"></a-entity>
+
+
 
     <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" position="-45 0.1 30"></a-entity>
     <a-entity road="length: 5; width: 3.6; color: #131e27; dashed: true" position="-97 0.1 1.5"
@@ -741,7 +779,9 @@
       rotation="0 0 0"></a-entity>
   </a-scene>
 
-  <script type="module" src="interaction.js"></script>
+  <script type="module" src="Interaction.js"></script>
+
+  <script src="components.js"></script>
 </body>
 
 </html>
