Update End of the game + totalquestion

--- a/examples/city/index.html
+++ b/examples/city/index.html
@@ -75,7 +75,7 @@
       movement-controls="constrainToNavMesh: true; controls: checkpoint, gamepad, trackpad, keyboard, nipple;"
       position="10 0 0">
 
-      <a-entity camera position="0 1.5 0" look-controls="pointerLockEnabled: true">
+      <a-entity camera position="0 1.5 0" look-controls="pointerLockEnabled: true" id="camera">
         <a-entity cursor position="0 0 -0.01" geometry="primitive: sphere; radius: 0.00005"
           material="color: #202020; shader: flat">
 
